# QtProject

./: .gitignore  CMakeLists.txt  QtProject.pro  README.md
application_mainprogram/: CMakeLists.txt  application_mainprogram.pro  main.cpp  widget.cpp  widget.h  widget.ui
downloader/: CMakeLists.txt  downitemwidget.cpp  downitemwidget.h  downitemwidget.ui  download.cpp  download.h  downloader.pro  widget.cpp  widget.h  widget.ui
drawtool/: CMakeLists.txt  basesetwidget.cpp  basesetwidget.h  basesetwidget.ui  commands.cpp  commands.h  customlistdelegate.cpp  customlistdelegate.h  drawglobal.cpp  drawglobal.h  drawsetwidget.cpp  drawsetwidget.h  drawsetwidget.ui  drawtool.pro  graphicsbox.cpp  graphicsbox.h  graphicslayer.cpp  graphicslayer.h  graphicsobject.cpp  graphicsobject.h  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h  layerlistmodel.cpp  layerlistmodel.h  pathitem.cpp  pathitem.h  pixmapitem.cpp  pixmapitem.h  propertywidget.cpp  propertywidget.h  propertywidget.ui  rulewidget.cpp  rulewidget.h  textitem.cpp  textitem.h  toolwidget.cpp  toolwidget.h  widget.cpp  (+2 more)
everything/: CMakeLists.txt  chartwidget.cpp  chartwidget.h  chartwidget.ui  connectionpool.cpp  connectionpool.h  datareader.h  diskdatabase.cpp  diskdatabase.h  diskglobal.cpp  diskglobal.h  diskmodel.cpp  diskmodel.h  diskstruct.h  diskwork.cpp  diskwork.h  everything.pro  qcppie.cpp  qcppie.h  qcustomplot.cpp  qcustomplot.h  searchwidget.cpp  searchwidget.h  searchwidget.ui  threadpool.cpp  threadpool.h  widget.cpp  widget.h  widget.ui
handleorcode/: CMakeLists.txt  cameradialog.cpp  cameradialog.h  cameradialog.ui  handleorcode.pro  widget.cpp  widget.h  widget.ui
handleorcode/qrencode/: config.h  qrenc.c  qrencode.pri
handleorcode/qzxing/: QZXing-components.pri
handleorcode/qzxing/src/: QZXing_resource.rc
imageedit/: component.h  componentdialog.cpp  componentdialog.h  componentitem.cpp  componentitem.h  componentmethod.cpp  componentmethod.h  flowchart.cpp  flowchart.h  flowchart.ui  graphicsview.cpp  graphicsview.h  imageedit.pro  widget.cpp  widget.h  widget.ui
include/: common.pri  dll_global.h
mediaplayer/: CMakeLists.txt  finddesktop.cpp  finddesktop.h  gifdesktop.cpp  gifdesktop.h  gifdesktop.ui  mediaplayer.pro  mediawidget.cpp  mediawidget.h  mediawidget.ui  mousehook.cpp  mousehook.h  mywebengnineview.cpp  mywebengnineview.h  seekslider.cpp  seekslider.h  videodesktop.cpp  videodesktop.h  videodesktop.ui  videosurface.cpp  videosurface.h  videowidget.cpp  videowidget.h  videowork.cpp  videowork.h  wallpaperwidget.cpp  wallpaperwidget.h  webdesktop.cpp  webdesktop.h  webdesktop.ui  widget.cpp  widget.h  widget.ui
screenrecord/: CMakeLists.txt  gifwork.cpp  gifwork.h  rectwidget.cpp  rectwidget.h  screenrecord.pro  widget.cpp  widget.h  widget.ui
screenshot/: CMakeLists.txt  irrewidget.cpp  irrewidget.h  main.cpp  rectwidget.cpp  rectwidget.h  screenshot.pro  screenshotwgt.cpp  screenshotwgt.h  screenshotwgt.ui
